...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cur-c0-4nR">
                                <rect key="frame" x="37.5" y="70" width="300" height="300"/>
                                <color key="backgroundColor" red="0.78823529411764703" green="0.7803921568627451" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="imageView">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="OVk-H0-dqd"/>
                                    <constraint firstAttribute="height" constant="300" id="lAP-HZ-mSC"/>
                                </constraints>
...
                                <rect key="frame" x="121.5" y="573" width="132" height="44"/>
                                <color key="backgroundColor" red="0.25882352941176467" green="0.25490196078431371" blue="0.25490196078431371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="132" id="Q7X-Ba-0ak"/>
                                    <constraint firstAttribute="height" constant="44" id="zDM-KS-IcU"/>
                                </constraints>
                                <state key="normal" title="SHOW">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="showButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="g0x-7t-p3U"/>
                                </connections>
                            </button>
...
